--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!--Heading -->
   <section id="header" class="main-heading">
-    <div class="">
+    <div class="container-fluid">
         <h1 class="primary-heading">Nous n'avons pas de planète B</h1>
         <p class="primary-text">Tous les jours notre environment souffre, des écosystèmes disparaissent,
           de plus en plus d'espèces sont en voix d'extinction.<br> 
@@ -117,9 +117,9 @@
             <h2 class="volunteer-title">Marche pour le climat</h2>
             <p class="volunteer-text">Rejoignez nous le 12 Juin 2023 lors d'une marche
                pour le climat</br><em>Découvrez dans 
-              qu'elles villes seront organisé nos marches pour la planète.
+              qu'elles villes seront organisés nos marches pour la planète.
             </em></p>
-          <a href="#" class="btn btn-lg btn-outline-dark col-lg-12">Plus d'infos</a>
+          <a href="events.html" class="btn btn-lg btn-outline-dark col-6">Plus d'infos</a>
         </div>
         <div class="carousel-item">
           <img src="images/plant-trees.jpeg" class="volunteer-image" alt="Plantation d'arbre">
@@ -129,16 +129,16 @@
               bénévolat de plantation d'arbres la plus proche de chez vous.</br> <em>Plusieurs dates et 
                 lieux chaque mois.</em>
             </p>
-          <a href="#" class="btn btn-lg btn-outline-dark col-12">Plus d'infos</a>
+          <a href="events.html" class="btn btn-lg btn-outline-dark col-6">Plus d'infos</a>
         </div>
         <div class="carousel-item">
-          <img src="images/cleanu-up.jpeg" class="volunteer-image" alt="Nettoyons nos plages">
+          <img src="images/beach-clean-up.jpeg" class="volunteer-image" alt="Nettoyons nos plages">
           <h2 class="volunteer-title">Nettoyons nos plages</h2>
-          <p class="volunteer-text">Chaque année nous organisons de grand évènement pour nettoyer
+          <p class="volunteer-text">Chaque année nous organisons de grands évènements pour nettoyer
              nos littoraux. </br>
-            <em>Découvrez nos évènements à venir près de chez vous ou de votre lieu de vacance.</em>
+            <em>Découvrez nos évènements à venir près de chez vous ou de votre lieu de vacances.</em>
           </p>
-        <a href="#" class="btn btn-lg btn-outline-dark col-12">Plus d'infos</a>
+        <a href="events.html" class="btn btn-lg btn-outline-dark col-6">Plus d'infos</a>
       </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#volunteer-carousel" 
@@ -160,16 +160,16 @@
   </section>
 
   <!-- Small Actions -->
-  <section class="..." id="small-actions">
+  <section class="action-cards" id="small-actions">
 
     <h2 class="actions-heading">Des petits gestes pour la planète</h2>
-    <p>Protégeons et améliorons l'environnement pour les générations futures.</p>
+    <p class="actions-subheading">Protégeons et améliorons l'environnement pour les générations futures.</p>
 
     <div class="row">
     <div class="actions-column col-lg-4 col-md-6">
-    <div class="card">
+    <div class="card h-100">
       <div class="card-header">
-        <h3 class="actions-header"><i class="fa-duotone fa-recycle"></i></h3>
+        <h3 class="actions-header"><i class="fa-sharp fa-solid fa-recycle"></i></h3>
       </div>
       <div class="card-body">
         <p class="card-text"> 
@@ -186,9 +186,9 @@
   </div>
 
   <div class="actions-column col-lg-4 col-md-6">
-    <div class="card">
+    <div class="card h-100">
     <div class="card-header">
-      <h3 class="actions-header"><i class="fa-duotone fa-shoe-prints"></i></h3>
+      <h3 class="actions-header"><i class="fa-sharp fa-solid fa-shoe-prints"></i></h3>
     </div>
     <div class="card-body">
       <p class="card-text"> 
@@ -204,9 +204,9 @@
   </div>
     
   <div class="actions-column col-lg-4">
-    <div class="card">
+    <div class="card h-100">
       <div class="card-header">
-        <h3 class="actions-header"><i class="fa-regular fa-lightbulb-on"></i></h3>
+        <h3 class="actions-header"><i class="fa-solid fa-lightbulb"></i></h3>
       </div>
       <div class="card-body">
         <p class="card-text"> 
@@ -225,7 +225,6 @@
   </div>
   </section>
 
-  <!-- Footer -->
 
 <!-- Footer -->
 
