Events page changes and start of CSS; Change of index main background img; attempt to  fix issue with heading div"

--- a/index.html
+++ b/index.html
@@ -66,50 +66,55 @@
     <div class="container-fluid">
         <h1 class="primary-heading">Nous n'avons pas de planète B</h1>
         <p class="primary-text">Tous les jours notre environment souffre, des écosystèmes disparaissent,
-          de plus en plus d'espèces sont en voix d'extinction.<br> 
-          Protégeons nos forêts, nos océans, nos animaux et notre planète.
+          de plus en plus d'espèces sont en voie d'extinction.<br> 
+          Protégeons nos forêts, nos océans, nos animaux, notre planète.
         </p>
-        <button 
-            type="button" 
-            class="donate-button btn btn-outline-light btn-lg">
-            <i class="fa-solid fa-hand-holding-heart"></i>
-            Donnation
-          </button>
+        <div class="btn-div">
           <button 
-            type="button"  
-            class="volunteer-button btn btn-outline-light btn-lg">
-            <i class="fa-solid fa-handshake-angle"></i>
-            Bénévolat
-          </button>
+          type="button" 
+          class="donate-button btn btn-outline-light btn-lg">
+          <i class="fa-solid fa-hand-holding-heart"></i>
+          Donnation
+        </button>
+        <button 
+          type="button"  
+          class="volunteer-button btn btn-outline-light btn-lg">
+          <i class="fa-solid fa-handshake-angle"></i>
+          Bénévolat
+        </button>
+      </div>
     </div>
   </section>
 
   <!-- Stats -->
   <section class="brown-section" id="stats">
-    <div class="row">
-      <div class="main-stats-box col-lg-3">
-        <h4 class="stats-highlight">Des écosystèmes tropicaux et océaniques sains sont
-           indispensables au maintien d'une planète en bonne santé.</h4>
-      </div>
-      <div class="stats-box col-lg-3">
-        <h3 class="stats-title">23%</h3>
-        <p>Les forêts tropicales de la planète sont capables de fournir 23 % des mesures
-           d'atténuation du changement climatique nécessaires d'ici à 2030.</p>
-      </div>
-      <div class="stats-box col-lg-3">
-        <h3 class="stats-title">99%</h3>
-        <p>On estime que 99 % des espèces de la forêt tropicale humide n'ont pas encore été étudiées.</p>
-      </div>
-      <div class="stats-box col-lg-3">
-        <h3 class="stats-title">50%</h3>
-        <p>De l'oxygène présent dans l'atmosphère est produit par les plantes marines.</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="main-stats-box col-lg-3">
+          <h4 class="stats-highlight">Des écosystèmes tropicaux et océaniques sains sont
+             indispensables au maintien d'une planète en bonne santé.</h4>
+        </div>
+        <div class="stats-box col-lg-3">
+          <h3 class="stats-title">23%</h3>
+          <p>Les forêts tropicales de la planète sont capables de fournir 23 % des mesures
+             d'atténuation du changement climatique nécessaires d'ici à 2030.</p>
+        </div>
+        <div class="stats-box col-lg-3">
+          <h3 class="stats-title">99%</h3>
+          <p>On estime que 99 % des espèces de la forêt tropicale humide n'ont pas encore été étudiées.</p>
+        </div>
+        <div class="stats-box col-lg-3">
+          <h3 class="stats-title">50%</h3>
+          <p>De l'oxygène présent dans l'atmosphère est produit par les plantes marines.</p>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Get involved -->
   <section class="" id="volunteering">
-    <h3 class="volunteering-heading">NOS ÉVÈNEMENTS À VENIR</h3>
+    <div class="container-fluid">
+      <h3 class="volunteering-heading">NOS ÉVÈNEMENTS À VENIR</h3>
     <div id="volunteer-carousel" class="carousel slide" data-bs-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -157,12 +162,13 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    </div>
   </section>
 
   <!-- Small Actions -->
   <section class="action-cards" id="small-actions">
-
-    <h2 class="actions-heading">Des petits gestes pour la planète</h2>
+    <div class="container-fluid">
+      <h2 class="actions-heading">Des petits gestes pour la planète</h2>
     <p class="actions-subheading">Protégeons et améliorons l'environnement pour les générations futures.</p>
 
     <div class="row">
@@ -222,22 +228,26 @@
     </div>
   </div>
     
-  </div>
+    </div>
+    </div>
   </section>
 
 
 <!-- Footer -->
 
   <footer id="footer">
-    <div>
-      <i class="social-icons fa-brands fa-twitter"></i>
-      <i class="social-icons fa-brands fa-facebook"></i>
-      <i class="social-icons fa-brands fa-instagram"></i>
-      <i class="social-icons fa-solid fa-envelope"></i>
+    <div class="container-fluid">
+      <div>
+        <i class="social-icons fa-brands fa-twitter"></i>
+        <i class="social-icons fa-brands fa-facebook"></i>
+        <i class="social-icons fa-brands fa-instagram"></i>
+        <i class="social-icons fa-solid fa-envelope"></i>
+      </div>
+  
+      <p>© Copyright NoPlanetB</p>
+  
     </div>
-
-    <p>© Copyright NoPlanetB</p>
-
+    
   </footer>
 
 </body>
