Index.html bug fixes, and media querry addition;

--- a/index.html
+++ b/index.html
@@ -62,29 +62,30 @@
     
 
     <!--Heading -->
-  <section id="header" class="main-heading">
-    <div class="container-fluid">
+    <section id="header" class="main-heading">
+      <div class="container-fluid">
         <h1 class="primary-heading">Nous n'avons pas de planète B</h1>
         <p class="primary-text">Tous les jours notre environment souffre, des écosystèmes disparaissent,
           de plus en plus d'espèces sont en voie d'extinction.<br> 
           Protégeons nos forêts, nos océans, nos animaux, notre planète.
         </p>
-        <div class="btn-div">
-          <button 
+      <div class="btn-div">
+        <button 
           type="button" 
-          class="donate-button btn btn-outline-light btn-lg">
+          class="btn donate-button  btn-outline-light btn-lg">
           <i class="fa-solid fa-hand-holding-heart"></i>
           Donnation
         </button>
         <button 
           type="button"  
-          class="volunteer-button btn btn-outline-light btn-lg">
+          class="btn volunteer-button btn-outline-light btn-lg">
           <i class="fa-solid fa-handshake-angle"></i>
           Bénévolat
         </button>
       </div>
-    </div>
-  </section>
+      </div>
+    </section>
+ 
 
   <!-- Stats -->
   <section class="brown-section" id="stats">
@@ -199,7 +200,7 @@
     <div class="card-body">
       <p class="card-text"> 
         <h2 class="actions-text">Réduisez votre empreinte carbone</h2>
-        <p>Marcher davantage ou faire du vélo</p>
+        <p>Marcher d'avantage ou faire du vélo</p>
         <p>Utiliser les transports publics</p>
         <p>Consommer moins d'électricité</p>
         <p>Gaspiller moins d'eau</p>
