Changes to design of petition cards

--- a/events.html
+++ b/events.html
@@ -129,12 +129,14 @@
   <h1 class="petitions-title">NOS PÉTITIONS</h1>
 
   <section class="petition-wrapper">
-      <div class="wrapper">
+    <div class="container-fluid">
+      <div class="wrapper row">
         <div class="card petition-card">
             <img class="petition-card-image" src="images/coral.jpg" alt="Massif Coraliens">
-            <div class="petition-card-infos">
-                <h1>Pétition pour la protection des massif coraliens</h1>
-                <p> Aidez nous a sauver ablbabalbal
+            <div class="petition-card-infos text-wrap">
+                <h2>Pétition pour la protection des massifs coraliens</h2>
+                <p> Nous devons protéger la vie sous l&apos;eau, « car la vie au-dessus de 
+                  l&apos;eau dépend de la santé de la vie sous l&apos;eau »
                 </p>
                 <a href='#' class="btn petition-btn">Signez la pétition</a>
             </div>
@@ -142,9 +144,9 @@
         
         <div class="card petition-card">
             <img class="petition-card-image" src="images/forest.jpeg" alt="Foret Amazonienne">
-            <div class="petition-card-infos">
-                <h1>Pétition pour la sauvegarde de la foret Amazonienne</h1>
-                <p>Protegeons la foret et ses especes
+            <div class="petition-card-infos text-wrap">
+                <h2>Pétition pour la sauvegarde de la forêt Amazonienne</h2>
+                <p>Protégeons les poumons de notre planète. 
                 </p>
                 <a href='#' class="btn petition-btn">Signez la pétition</a>
             </div>
@@ -154,10 +156,10 @@
         <div class="card petition-card">
             <img class="petition-card-image" src="images/mountain-river.jpeg" alt="Pic de montagne et
              rivière">
-            <div class="petition-card-infos">
-                <h1>Reduisons les effets de serres etla fonte des glace]es</h1>
-                <p>Appelons a la reduction des effets de serres des industries qui entraine la fonte
-                  des glaces
+            <div class="petition-card-infos text-wrap">
+                <h2>Réduisons les effets de serres et la fonte des glaces</h2>
+                <p>Appelons à la réduction des effets de serres des industries qui entraînent la 
+                  fonte des glaces.
                 </p>
                 <a href='#' class="btn petition-btn">Signez la pétition</a>
             </div>
@@ -166,14 +168,16 @@
         <div class="card petition-card">
           <img class="petition-card-image" src="images/save-the-bees.jpg" alt="Pic de montagne et
            rivière">
-          <div class="petition-card-infos">
-              <h1>Protégeons nos abeilles des pésticides</h1>
-              <p>Les pesticides font disparaitres nos abeilles des acteurs majeur de notre environment.
+          <div class="petition-card-infos text-wrap">
+              <h2>Protégeons nos abeilles des pésticides</h2>
+              <p>Les pésticides tuent les abeilles, des acteurs majeurs de notre environement.
               </p>
               <a href='#' class="btn petition-btn">Signez la pétition</a>
           </div>
         </div>
     </div>
+    </div>
+      
   </section>
 
 
