Addition to Meta, and CSS fixes on events page

--- a/events.html
+++ b/events.html
@@ -42,15 +42,15 @@
           <a class="nav-link active" aria-current="page" href="/index.html">Acceuil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Statistiques</a>
+          <a class="nav-link" href="/index.html/stats">Statistiques</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Nos Évènements</a>
+          <a class="nav-link" href="#events">Nos Évènements</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Les bons gestes</a>
+          <a class="nav-link" href="/index.html/small-actions">Les bons gestes</a>
         </li>
-        <li><a class="nav-link nav-text" href="#">Contactez nous</a></li>
+        <li><a class="nav-link nav-text" href="#footer">Contactez nous</a></li>
         <li><a class="nav-link">
           <i class="fa-solid fa-hand-holding-heart">
             Faire un Don
