--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="bootstrap.css" rel="stylesheet">
  
   <!-- Bootstrap JS -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>  
   <!-- CSS Stylesheet -->
   <link rel="stylesheet" href="styles.css">
@@ -22,6 +23,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta type="description" content="No Planet B propose des évènements et pétitions pour la 
+  sauvegarde environnementale. Nous offrons pleins d'astuces afin de réduire votre empreinte carbone.">
   <title>No Planet B</title>
 </head>
 
@@ -41,15 +44,15 @@
               <a class="nav-link active" aria-current="page" href="#">Acceuil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Statistiques</a>
+              <a class="nav-link" href="#stats">Statistiques</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nos Évènements</a>
+              <a class="nav-link" href="#volunteering">Nos Évènements</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Les bons gestes</a>
+              <a class="nav-link" href="#small-actions">Les bons gestes</a>
             </li>
-            <li><a class="nav-link nav-text" href="#">Contactez nous</a></li>
+            <li><a class="nav-link nav-text" href="#footer">Contactez nous</a></li>
             <li><a class="nav-link">
               <i class="fa-solid fa-hand-holding-heart">
                 Faire un Don
