--- a/events.html
+++ b/events.html
@@ -22,6 +22,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta type="description" content="No Planet B propose des évènements et pétitions pour la 
+  sauvegarde environnementale. Chacun peut trouver un évènement qui lui plaira ou 
+  une cause a supporter. ">
   <title>No Planet B - Events</title>
 </head>
 
